--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView android:layout_height="50dp" android:layout_width="wrap_content" android:textSize="20sp" android:text="title" android:layout_marginTop="25dp" android:layout_marginStart="15dp" android:layout_alignParentTop="true" android:layout_alignParentStart="true" android:id="@+id/title_container"/>
+    <ImageView android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:src="@drawable/expressionless_face"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="15dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/title_container"/>
 
     <FrameLayout android:layout_height="wrap_content"
         android:layout_width="match_parent"
